fix alignment

--- a/lupa.css
+++ b/lupa.css
@@ -128,19 +128,19 @@ height: 80%;
   .book-centered-text{
     display: inline-table;
     text-align: -webkit-center;
-    margin-right: 30%;
+    margin-right: 32%;
   }
   .instructions-td{
     vertical-align: -webkit-baseline-middle;
   }
   .book-img{
-      margin-right: 8%;
+      margin-right: 11%;
   }
   .imgNtext-link{
   margin: 8px;
   }
   .links-row{
-      margin-right: 25%;
+      margin-right: 28%;
       margin-bottom: 3%;
       margin-top: -4%;
   }
